# Praktikum-Mekatronika-dan-Robotika

./: README.md  capture_module.py  config.py  generate_sample_ktm.py  innovation_module.py  main.py  process_module.py  utils.py
Modul 01 Pengenalan EasyEDA/: BelajarPCB.epro
Modul 03 Desain3D Line Follower/: base pliée 2012.SLDPRT
Modul 05 WebServer FullStack JavaScript/: .firebaserc  firebase.json  firestore.rules
Modul 05 WebServer FullStack JavaScript/backend/: package-lock.json  package.json  seed.js  server.js
Modul 05 WebServer FullStack JavaScript/frontend/: index.html  package-lock.json  package.json
Modul 05 WebServer FullStack JavaScript/functions/: package-lock.json
Modul 06 WebServer MQTT ESP32/: .firebaserc
Modul 06 WebServer MQTT ESP32/.firebase/: hosting.cHVibGlj.cache
Modul 06 WebServer MQTT ESP32/ESP32-Firmware/: compile_commands.json  platformio.ini
Modul 06 WebServer MQTT ESP32/public/: index.html
Modul 07 YOLO ROS2/: README.md
Modul 07 YOLO ROS2/src/yolo_ros/: package.xml  setup.py
Modul 07 YOLO ROS2/src/yolo_ros/config/: yolo_params.yaml
Modul 07 YOLO ROS2/src/yolo_ros/launch/: yolo.launch.py
Modul 07 YOLO ROS2/src/yolo_ros/roboflow_data/: README.md
Modul 07 YOLO ROS2/src/yolo_ros/training_data/: README.md
Modul 07 YOLO ROS2/src/yolo_ros/yolo_ros/scripts/: camera_node.py  rviz_display.py  training_node.py  yolo_camera_node.py  yolo_node.py
Modul 09 PLC AI Modbus/: README.md  requirements.txt  run_node.sh  test_node.sh
Modul 10 Line Follower/: MainPCB.epro  SensorPCB.epro
(+33 files in other folders)
